# minimetr

./: README.md  hello.py  pyproject.toml
src/minimetr/: __init__.py  logger.py  reader.py
tests/: test_integration.py
